--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,4 +5,14 @@
   journal={EarthArXiv}
 }
 
-@article{Pargieła_2023, title={Optimising UAV Data Acquisition and Processing for Photogrammetry: A Review}, volume={17}, url={https://www.gaee.agh.edu.pl/gaee/article/view/452}, DOI={10.7494/geom.2023.17.3.29}, abstractNote={&amp;lt;p&amp;gt;Unmanned aerial vehicles (UAVs) are used to acquire measurement data for an increasing number of applications. Photogrammetric studies based on UAV data, thanks to the significant development of computer vision techniques, photogrammetry, and equipment miniaturization, allow sufficient accuracy for many engineering and non-engineering applications to be achieved. In addition to accuracy, development time and cost of data acquisition and processing are also important issues. The aim of this paper is to present potential limitations in the use of UAVs to acquire measurement data and to present measurement and processing techniques affecting the optimisation of work both in terms of accuracy and economy. Issues related to the type of drones used (multi-rotor, fixed-wing), type of shutter in the camera (rolling shutter, global shutter ), camera calibration method (pre-calibration, self-calibration), georeferencing method (direct, indirect), technique of measuring the external images orientation parameters (RTK, PPK, PPP), flight design methods and the type of software used were analysed.&amp;lt;/p&amp;gt;}, number={3}, journal={Geomatics and Environmental Engineering}, author={Pargieła, Karolina}, year={2023}, month={Feb.}, pages={29–59} }
+@article{Pargieła_2023,
+  title={Optimising UAV Data Acquisition and Processing for Photogrammetry: A Review},
+  author={Pargieła, Karolina}, 
+  year={2023},
+  month={Feb.}, 
+  journal={Geomatics and Environmental Engineering},
+  pages={29–59} 
+  volume={17},
+  url={https://www.gaee.agh.edu.pl/gaee/article/view/452},
+  DOI={10.7494/geom.2023.17.3.29},
+}
