--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,14 +5,11 @@
   journal={EarthArXiv}
 }
 
-@article{Pargieła_2023,
+@article{pargiela2023optimising,
   title={Optimising UAV Data Acquisition and Processing for Photogrammetry: A Review},
-  author={Pargieła, Karolina}, 
-  year={2023},
-  month={Feb.}, 
+  author={Pargie{\l}a, Karolina},
   journal={Geomatics and Environmental Engineering},
-  pages={29–59} 
   volume={17},
-  url={https://www.gaee.agh.edu.pl/gaee/article/view/452},
-  DOI={10.7494/geom.2023.17.3.29},
+  number={3},
+  year={2023}
 }
