--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,3 +13,12 @@
   number={3},
   year={2023}
 }
+
+@article{konert2020harmonized,
+  title={A harmonized european drone market?--new EU rules on unmanned aircraft systems},
+  author={Konert, Anna and Dunin, Tadeusz},
+  journal={Adv Sci Technol Eng Syst J},
+  volume={5},
+  pages={93--99},
+  year={2020}
+}
