Updated exposure triangle

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -22,3 +22,30 @@
   pages={93--99},
   year={2020}
 }
+
+@misc{ExposureTriangle2017,
+  title = {The {{Exposure Triangle}}},
+  year = {2017},
+  month = feb,
+  journal = {Action Camera Blog},
+  urldate = {2024-01-22},
+  langid = {english}
+}
+
+@misc{UnderstandingApertureDepth2017,
+  title = {Understanding {{Aperture}} and {{Depth}} of {{Field}}},
+  year = {2017},
+  month = feb,
+  journal = {Action Camera Blog},
+  urldate = {2024-01-22},
+  langid = {english}
+}
+
+@misc{ShutterSpeed2017,
+  title = {Shutter {{Speed}}},
+  year = {2017},
+  month = feb,
+  journal = {Action Camera Blog},
+  urldate = {2024-01-22},
+  langid = {english}
+}
